# cdn-ip-tester

./: .gitignore  Cargo.toml  README.md  cf-v4.txt  cf-v6.txt  get-cf-ip.py  get-data.sh  ip-tester.toml  ip-v4.txt  outbound-template-template.json  outbound-template.json  sing-box-template.json
.cargo/: config.toml
cdn-ip-tester-derive/: Cargo.toml
cdn-ip-tester-derive/src/: lib.rs
img/: struct.vsdx
src/: cache.rs  config.rs  data.rs  error.rs  lib.rs  main.rs  template.rs
tests/: ip_cidr_test.rs
