[package]
name = "cdn-ip-tester"
version = "0.2.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"


[dependencies]
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["json", "socks", "rustls-tls"], default-features = false }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.77"
regex = "1.10.2"
lazy_static = "1.4.0"
indicatif = "0.17.7"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.52"
cidr = "0.2.2"
url = "2.5.0"
cdn-ip-tester-derive = { path = "cdn-ip-tester-derive" }
